# py4ds_0_starting

./: README.md  pyproject.toml  requirements.txt
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: LICENSE  README.md  pyproject.toml  setup.py
ex09/src/ft_package/: __init__.py  code.py
