[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
	{name = "Iury Santos", email="iusantos@student.42sp.org.br"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/iuryr/py4ds_0_starting/tree/main/ex09"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
